force-app/main/default/objects/Interview__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <formula>IF(
     Total_Interview_Panel_Members__c &gt; 0, Total_Rating__c / Total_Interview_Panel_Members__c, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>