force-app/main/default/objects/Interview__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipName>Interview_Evaluation</relationshipName>
    <type>Lookup</type>
</CustomField>