force-app/main/default/objects/Interview__c/fields/Total_Interview_Panel_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Interview_Panel_Members__c</fullName>
    <label>Total Interview Panel Members</label>
    <summaryForeignKey>Proposal_Committee_Interview_Evaluation__c.Interview__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>