force-app/main/default/objects/Interview__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <label>Total Rating</label>
    <summarizedField>Proposal_Committee_Interview_Evaluation__c.Rating__c</summarizedField>
    <summaryFilterItems>
        <field>Proposal_Committee_Interview_Evaluation__c.Rating__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal_Committee_Interview_Evaluation__c.Interview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>